# CarsinOS

./: .coderabbit.yaml  .gitignore  AGENTS.local.md  AGENTS.md  APPDEX_AUTONOMY_GUARDRAILS_TICKET_SEQUENCE.md  APPDEX_CONNECTOR_HUB_EXECUTABLE_TICKET_BACKLOG.md  APPDEX_EXECUTABLE_TICKET_PACK_NEXT_BUILDOUT_AND_MC_CONVERGENCE.md  APPDEX_IMPLEMENTATION_TICKET_PACK.md  APPDEX_MC_APP_TSX_REFACTOR_MODULARIZATION_SPEC.md  APPDEX_MC_OPTION_C_HARDCODED_CONFIG_EXECUTABLE_TICKET_BACKLOG.md  APPDEX_MC_SLICK_UI_PLUS_AGENT_MAIL_BACKLOG.md  APPDEX_MISSION_CONTROL_V3_EXECUTABLE_TICKET_BACKLOG.md  APPDEX_MISSION_CONTROL_V3_PIPELINE_FIRST_SPEC.md  APPDEX_MNO_INTEGRATION_EXECUTABLE_TICKET_BACKLOG.md  APPDEX_QUICK_BRIEF_NEXT_BUILDOUT_AND_MC_CONVERGENCE.md  APPDEX_RMP_CONNECTORS_SPEC.md  APPDEX_SCRATCHPAD_CORE_LOOP_ADDS.md  ASSISTANT_TOOL_CONTRACT_V1_SPEC.md  CHECKLIST.md  CHECKPOINT.md  CLAUDE.md  CODEX_MC_ONBOARDING_SETUP_WIZARD_SPEC.md  CONTRIBUTING.md  Cargo.toml  LICENSE  OPENCLAW_VS_CARSINOS_GAP_AUDIT_2026-02-19.md  PLAN.md  PR_CHUNK_SYNC_PLAN.md  README.md  SECURITY.md  SECURITY_HARDENING_PROGRAM.md  frontend_claudit.md
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
apps/mission-control/src-tauri/: Cargo.toml  Entitlements.plist  tauri.beta.conf.json  tauri.conf.json
apps/mission-control/src-tauri/src/: lib.rs  main.rs
crates/carsinos-channels-discord/: Cargo.toml
crates/carsinos-channels-discord/src/: lib.rs
crates/carsinos-channels-telegram/: Cargo.toml
crates/carsinos-channels-telegram/src/: lib.rs
crates/carsinos-core/: Cargo.toml
crates/carsinos-core/src/: execass_actor.rs  execass_danger.rs  execass_manifest.rs  execass_policy.rs  execass_recovery.rs  lib.rs
crates/carsinos-effect-recorder/: Cargo.toml
crates/carsinos-effect-recorder/src/: auth.rs  custody.rs  exact_overwrite.rs  executor.rs  journal.rs  lib.rs  main.rs  root_identity.rs  service.rs  state_verifier.rs
crates/carsinos-effect-recorder/src/ipc/: mod.rs  unix.rs  windows.rs
crates/carsinos-effect-recorder/tests/: real_process_crash_matrix.rs  real_process_execute_once.rs
crates/carsinos-gateway/: Cargo.toml
crates/carsinos-gateway/src/: execass_actor_gate.rs  execass_confirmation_runtime.rs  execass_danger_bridge.rs  execass_http.rs  execass_intake.rs  execass_reference_fixture_tests.rs  installed_runtime_bootstrap.rs  main.rs  pinchtab_browser.rs  recorder_sidecar.rs  runbook.rs  runtime_control_host.rs  runtime_host_ownership.rs  windows_task_scheduler.rs
crates/carsinos-gateway/src/tests/: execass_reference_fixture_tests.rs
crates/carsinos-gateway/tests/: benchmark_process.rs  e2e_process.rs  windows_task_scheduler.rs
crates/carsinos-gateway/tests/common/: mod.rs
crates/carsinos-protocol/: Cargo.toml
crates/carsinos-protocol/src/: execass.rs  execass_recorder.rs  lib.rs
crates/carsinos-providers/: Cargo.toml
crates/carsinos-providers/src/: lib.rs
crates/carsinos-runtime-control/: Cargo.toml
crates/carsinos-runtime-control/src/: lib.rs  transport.rs
crates/carsinos-runtime-control/src/transport/: unix.rs  windows.rs
crates/carsinos-storage/: Cargo.toml
crates/carsinos-storage/src/: lib.rs
crates/carsinos-storage/src/execass/: active_work.rs  active_work_tests.rs  aggregate.rs  api_read.rs  api_read_tests.rs  canonical.rs  channel_reply.rs  claim.rs  claim_tests.rs  completion.rs  completion_tests.rs  confirmation.rs  confirmation_attestation.rs  confirmation_custody.rs  confirmation_test_support.rs  decision.rs  decision_tests.rs  delegation_control.rs  delegation_control_tests.rs  delivery.rs  delivery_tests.rs  effect.rs  effect_tests.rs  foundation.rs  global_stop.rs  global_stop_tests.rs  jobs.rs  jobs_tests.rs  lifecycle.rs  lifecycle_tests.rs  lineage.rs  lineage_tests.rs  mod.rs  orchestration.rs  policy.rs  policy_settings_tests.rs  projection.rs  projection_tests.rs  receipt.rs  receipt_integrity.rs  (+26 more)
crates/carsinos-storage/tests/: receipt_integrity_cli.rs
docs/: AGENT_MAIL_AUTOROUTE_AND_CHANNEL_ROUTING_BLOCKERBOARD.md  AGENT_MAIL_AUTOROUTE_AND_CHANNEL_ROUTING_EXECUTION_CHECKLIST.md  AGENT_MAIL_AUTOROUTE_AND_CHANNEL_ROUTING_GOAL.md  AGENT_MAIL_AUTOROUTE_AND_CHANNEL_ROUTING_SPEC.md  AGENT_MAIL_AUTOROUTE_AND_CHANNEL_ROUTING_SPECSWARM_REPORT.md  AUTONOMY_GUARDRAILS_OBSERVABILITY.md  BUG_ANTHROPIC_OAUTH_PROFILE_500.md  CARSINOS_CONNECTION_INTEGRATION_PRE_SPEC.md  CARSINOS_FULL_AUDIT_REMEDIATION_BLOCKERBOARD.md  CARSINOS_FULL_AUDIT_REMEDIATION_EXECUTION_CHECKLIST.md  CARSINOS_FULL_AUDIT_REMEDIATION_SPEC.md  CARSINOS_NON_UI_HARDENING_SPINE_SPEC.md  CARSINOS_UNIFIED_CONNECTOR_REGISTRY_BLOCKERBOARD.md  CARSINOS_UNIFIED_CONNECTOR_REGISTRY_EXECUTION_CHECKLIST.md  CARSINOS_UNIFIED_CONNECTOR_REGISTRY_SPEC.md  CARSINOS_VISUAL_RUNBOOK_BLOCKERBOARD.md  CARSINOS_VISUAL_RUNBOOK_EXECUTION_CHECKLIST.md  CARSINOS_VISUAL_RUNBOOK_RECOMMENDATION.md  CARSINOS_VISUAL_RUNBOOK_SPEC.md  CLAUDE_DESIGN_POLISH_BLOCKERBOARD.md  CLAUDE_DESIGN_POLISH_CHECKLIST.md  CLAUDE_DESIGN_POLISH_SPEC.md  CLIDEX_HARDCODE_CONFIG_AUDIT_TASK.md  CLIDEX_HARDCODE_REMEDIATION_TASK.md  COCKPIT_REDESIGN_SPEC.md  CODEBASE_E2E_AUDIT.md  DELTA_LOG.md  EXECASS_BACKEND_PRODUCT_BEHAVIOR_BRIEF.md  EXECASS_BACKEND_RUNTIME_PRODUCT_CORRECTION_BLOCKERBOARD.md  EXECASS_BACKEND_RUNTIME_PRODUCT_CORRECTION_CHECKLIST.md  EXECASS_BACKEND_RUNTIME_PRODUCT_CORRECTION_SPEC.md  EXECASS_EA201_POLICY_PRESET_PROPOSAL.md  EXECASS_EA308_ASSISTANT_DESK_CUTOVER_MAP.json  EXECASS_EA312_FINAL_HOSTILE_REVIEW.md  EXECASS_EA401_RUNTIME_HOST_GAP_MAP.md  EXECASS_EA404_RUNTIME_RECOVERY_EVIDENCE.md  EXECASS_EA405_WINDOWS_TASK_SCHEDULER_DESIGN.md  EXECASS_EA406_LEGACY_LAUNCH_FENCING.md  EXECASS_FRONTEND_EXPERIENCE_BRIEF.md  EXECASS_FRONTEND_INTEGRATION_HANDOFF.md  (+34 more)
migrations/: 0001_init.sql  0002_strategy_phase1.sql  0003_strategy_schema_cleanup.sql  0004_agent_memory_bindings.sql  0005_connector_registry.sql  0007_execass_replacement.sql  0008_glass_office_projection.sql
scripts/: carsinos_state.ps1  carsinos_state.py  channel_soak_runner.py  launch_mission_control_tauri_dev.command  mission_control_e2e_placeholder.mjs  (+21 more)
(+400 files in other folders)
