[workspace]
members = [
  "crates/carsinos-channels-bluebubbles",
  "crates/carsinos-channels-discord",
  "crates/carsinos-channels-slack",
  "crates/carsinos-channels-telegram",
  "crates/carsinos-channels-whatsapp",
  "crates/carsinos-cli",
  "crates/carsinos-core",
  "crates/carsinos-gateway",
  "crates/carsinos-gui",
  "crates/carsinos-providers",
  "crates/carsinos-protocol",
  "crates/carsinos-storage",
  "crates/carsinos-tools",
]
resolver = "2"

[workspace.package]
authors = ["domusanimae"]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }
