[package]
name = "carsinos-channels-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
httpmock = "0.7"
