[package]
name = "carsinos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
execass-test-authority = []

[dependencies]
anyhow.workspace = true
carsinos-protocol = { path = "../carsinos-protocol" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
