[package]
name = "carsinos-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
carsinos-core = { path = "../carsinos-core" }
carsinos-providers = { path = "../carsinos-providers" }
carsinos-protocol = { path = "../carsinos-protocol" }
carsinos-channels-discord = { path = "../carsinos-channels-discord" }
carsinos-channels-telegram = { path = "../carsinos-channels-telegram" }
carsinos-storage = { path = "../carsinos-storage" }
carsinos-tools = { path = "../carsinos-tools" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
fs2 = "0.4"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
jsonwebtoken = "9"
cron = "0.12"
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true, features = ["cors", "request-id", "trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
url = "2"
uuid.workspace = true

[dev-dependencies]
futures-util = "0.3"
httpmock = "0.7"
portpicker = "0.1"
tempfile = "3"
tokio-tungstenite = "0.28"
urlencoding = "2.1"
