[package]
name = "carsinos-mission-control"
version = "0.1.0"
description = "CarsinOS Mission Control desktop shell"
authors = ["CarsinOS"]
edition = "2021"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "carsinos_mission_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
keyring = "2.3.3"
uuid = { version = "1", features = ["v4"] }
carsinos-protocol = { path = "../../../crates/carsinos-protocol" }
carsinos-runtime-control = { path = "../../../crates/carsinos-runtime-control" }
hmac = "0.12"
sha2 = "0.10"
zeroize = "1.9"

[workspace]
